--- a/rebar.config
+++ b/rebar.config
@@ -73,8 +73,7 @@
         {copy, "./_build/default/lib/blockchain/scripts/extensions/repair",
             "bin/extensions/repair"},
         {copy, "./_build/default/lib/blockchain/scripts/extensions/sc", "bin/extensions/sc"},
-        {copy, "./scripts/extensions/info", "bin/extensions/info"},
-        {copy, "./scripts/extensions/config", "bin/extensions/config"}
+        {copy, "./scripts/extensions/info", "bin/extensions/info"}
     ]},
     {extended_start_script_hooks, [
         {post_start, [
@@ -91,8 +90,7 @@
         {txn, "extensions/txn"},
         {repair, "extensions/repair"},
         {sc, "extensions/sc"},
-        {info, "extensions/info"},
-        {config, "extensions/config"}
+        {info, "extensions/info"}
     ]}
 ]}.
 
