Dialyzer and formatting fixes

--- a/config/test.config
+++ b/config/test.config
@@ -11,11 +11,11 @@
         {sc_expiration_interval, 25},
         {pp_routing_config_filename, testing},
         {http_roaming_port, 3003},
-        {http_roaming_ip_list, "localhost,127.0.0.1"}
+        {http_roaming_ip_list, "localhost,127.0.0.1"},
         %% For Basic Auth
-	{pp_listener_use_tls, false},
-	{pp_listener_protocol_opts, [{port, 8080}]},
-	{pp_auth_middleware, basic_auth_middleware}
+        {pp_listener_use_tls, false},
+        {pp_listener_protocol_opts, [{port, 8080}]},
+        {pp_auth_middleware, basic_auth_middleware}
     ]},
     {blockchain, [
         {port, 2154}
