remove the rest of the ip list

--- a/config/sys.config
+++ b/config/sys.config
@@ -14,8 +14,7 @@
         {sc_expiration_buffer, 15},
         {pp_metrics_file, "/var/data/pp_metrics.dat"},
         {pp_routing_config_file, "/var/data/routing_config.json"},
-        {http_roaming_port, 8081},
-        {http_roaming_ip_list, ""}
+        {http_roaming_port, 8081}
     ]},
     {blockchain, [
         {port, 2154},
