--- a/config/test.config
+++ b/config/test.config
@@ -10,8 +10,7 @@
         {sc_open_dc_amount, 100},
         {sc_expiration_interval, 25},
         {pp_routing_config_filename, testing},
-        {http_roaming_port, 8081},
-        {http_roaming_ip_list, "localhost,127.0.0.1"}
+        {http_roaming_port, 8081}
     ]},
     {blockchain, [
         {port, 2154}
