--- a/rebar.config
+++ b/rebar.config
@@ -6,6 +6,7 @@
 
 {deps, [
     {clique, ".*", {git, "https://github.com/helium/clique.git", {branch, "develop"}}},
+    {lager, "3.9.2"},
     {observer_cli, "1.6.0"},
     {jsx, {git, "https://github.com/lthiery/jsx", {branch, "main"}}},
     {kvc, {git, "https://github.com/etrepum/kvc", {tag, "v1.7.0"}}},
