--- a/config/sys.config
+++ b/config/sys.config
@@ -40,6 +40,32 @@
         {network, mainnet},
         {max_tcp_connections, 50000}
     ]},
+    {grpcbox, [
+        {servers, [
+            #{
+                grpc_opts => #{
+                    service_protos => [state_channel_pb],
+                    services => #{
+                        'helium.state_channel' => blockchain_grpc_sc_server_handler
+                    }
+                },
+                transport_opts => #{ssl => false},
+                listen_opts => #{
+                    port => 8080,
+                    ip => {0, 0, 0, 0}
+                },
+                pool_opts => #{size => 500},
+                server_opts => #{
+                    header_table_size => 4096,
+                    enable_push => 1,
+                    max_concurrent_streams => unlimited,
+                    initial_window_size => 65535,
+                    max_frame_size => 16384,
+                    max_header_list_size => unlimited
+                }
+            }
+        ]}
+    ]},
     {prometheus, [
         {collectors, [
             prometheus_boolean,
