--- a/config/test.config
+++ b/config/test.config
@@ -13,7 +13,35 @@
         {http_roaming_port, 8081}
     ]},
     {blockchain, [
-        {port, 2154}
+        {port, 2154},
+        {sc_sup_type, server}
+    ]},
+    {grpcbox, [
+        {client, #{channels => [{default_channel, [{http, "localhost", 8080, []}], #{}}]}},
+        {servers, [
+            #{
+                grpc_opts => #{
+                    service_protos => [state_channel_pb],
+                    services => #{
+                        'helium.state_channel' => blockchain_grpc_sc_server_handler
+                    }
+                },
+                transport_opts => #{ssl => false},
+                listen_opts => #{
+                    port => 8080,
+                    ip => {0, 0, 0, 0}
+                },
+                pool_opts => #{size => 2},
+                server_opts => #{
+                    header_table_size => 4096,
+                    enable_push => 1,
+                    max_concurrent_streams => unlimited,
+                    initial_window_size => 65535,
+                    max_frame_size => 16384,
+                    max_header_list_size => unlimited
+                }
+            }
+        ]}
     ]},
     {lager, [
         {suppress_supervisor_start_stop, true},
