bring back router_pb
I thought it was related to the testing helium router service from
router that was removed.

--- a/config/test.config
+++ b/config/test.config
@@ -21,7 +21,7 @@
         {servers, [
             #{
                 grpc_opts => #{
-                    service_protos => [state_channel_pb],
+                    service_protos => [router_pb, state_channel_pb],
                     services => #{
                         'helium.state_channel' => blockchain_grpc_sc_server_handler
                     }
