--- a/rebar.config
+++ b/rebar.config
@@ -22,6 +22,8 @@
 ]}.
 
 {plugins, [
+    {grpcbox_plugin,
+        {git, "https://github.com/novalabsxyz/grpcbox_plugin.git", {branch, "master"}}},
     {rebar3_format, "0.8.2"},
     {erlfmt, "0.10.0"}
 ]}.
