xref ignore grpc records

--- a/rebar.config
+++ b/rebar.config
@@ -45,6 +45,15 @@
     locals_not_used
 ]}.
 
+{xref_ignores, [
+    validator_pb,
+    validator_client_pb,
+    router_pb,
+    router_client_pb,
+    state_channel_pb,
+    state_channel_client_pb
+]}.
+
 {profiles, [
     {test, [
         {overrides, [
