disable grpcbox from settings
leave the config around to start by hand if wanted.

--- a/config/sys.config
+++ b/config/sys.config
@@ -40,7 +40,7 @@
         {network, mainnet},
         {max_tcp_connections, 50000}
     ]},
-    {grpcbox, [
+    {disabled_grpcbox, [
         {servers, [
             #{
                 grpc_opts => #{
