empty response roaming-testing (#150)
* don't crash trying to decode empty payloads

* doh

* Use a base map for different versions

* disable grpcbox from settings

leave the config around to start by hand if wanted.

* default net_id to 1.0 protocol

* respect forced protocl version after merge

* add 1.1 field to test

--- a/config/sys.config
+++ b/config/sys.config
@@ -14,7 +14,10 @@
         {sc_expiration_buffer, 15},
         {pp_metrics_file, "/var/data/pp_metrics.dat"},
         {pp_routing_config_file, "/var/data/routing_config.json"},
-        {http_roaming_port, 8081}
+        {http_roaming_port, 8081},
+        {force_net_id_protocol_version, #{
+            16#600013 => pv_1_0
+        }}
     ]},
     {blockchain, [
         {port, 2154},
@@ -40,7 +43,7 @@
         {network, mainnet},
         {max_tcp_connections, 50000}
     ]},
-    {grpcbox, [
+    {disabled_grpcbox, [
         {servers, [
             #{
                 grpc_opts => #{
