--- a/config/sys.config
+++ b/config/sys.config
@@ -17,7 +17,8 @@
         {http_roaming_port, 8081},
         {force_net_id_protocol_version, #{
             16#600013 => pv_1_0
-        }}
+        }},
+        {metrics_unique_packet_lru_size, 7000}
     ]},
     {blockchain, [
         {port, 2154},
