--- a/rebar.config
+++ b/rebar.config
@@ -11,14 +11,14 @@
     {jsx, {git, "https://github.com/lthiery/jsx", {branch, "main"}}},
     {kvc, {git, "https://github.com/etrepum/kvc", {tag, "v1.7.0"}}},
     {blockchain, {git, "https://github.com/helium/blockchain-core.git", {branch, "master"}}},
-    {erlang_lorawan,
-        {git, "https://github.com/helium/erlang-lorawan.git", {branch, "master"}}},
+    {erlang_lorawan, {git, "https://github.com/helium/erlang-lorawan.git", {branch, "master"}}},
     {iso8601, ".*", {git, "https://github.com/erlsci/iso8601.git", {tag, "1.3.1"}}},
     {xxhash, {git, "https://github.com/pierreis/erlang-xxhash", {branch, "master"}}},
     {prometheus, "4.8.1"},
     {elli, "3.3.0"},
     {hackney, "1.17.0"},
-    {websocket_client, "1.3.0"}
+    {websocket_client, "1.3.0"},
+    {lru, "2.4.0"}
 ]}.
 
 {plugins, [
