Count unique offers with ETS
Insert or update a counter for every phash we see.

- unique_offers_cleanup_timer :: seconds
  - How often in seconds to scan the ets table for cleanup.
- unique_offers_window :: seconds
  - How long before Now are items considered unique.
  - **NOTE**: there's potential for packets to be double counted if
    there is an offer delivery past `unique_offers_window`.

--- a/config/sys.config
+++ b/config/sys.config
@@ -17,7 +17,11 @@
         {http_roaming_port, 8081},
         {force_net_id_protocol_version, #{
             16#600013 => pv_1_0
-        }}
+        }},
+        {metrics, [
+            {unique_offers_cleanup_timer, 10},
+            {unique_offers_window, 180}
+        ]}
     ]},
     {blockchain, [
         {port, 2154},
