re-enable grpcbox

--- a/config/sys.config
+++ b/config/sys.config
@@ -47,7 +47,7 @@
         {network, mainnet},
         {max_tcp_connections, 50000}
     ]},
-    {disabled_grpcbox, [
+    {grpcbox, [
         {servers, [
             #{
                 grpc_opts => #{
