Depend on router-utils; Issue 4, helium-packet-router

--- a/rebar.config
+++ b/rebar.config
@@ -12,6 +12,7 @@
     {kvc, {git, "https://github.com/etrepum/kvc", {tag, "v1.7.0"}}},
     {blockchain, {git, "https://github.com/helium/blockchain-core.git", {branch, "master"}}},
     {erlang_lorawan, {git, "https://github.com/helium/erlang-lorawan.git", {branch, "master"}}},
+    {router_utils, {git, "https://github.com/helium/router-utils.git", {tag, "0.0.1"}}},
     {iso8601, ".*", {git, "https://github.com/erlsci/iso8601.git", {tag, "1.3.1"}}},
     {xxhash, {git, "https://github.com/pierreis/erlang-xxhash", {branch, "master"}}},
     {prometheus, "4.8.1"},
