--- a/rebar.config
+++ b/rebar.config
@@ -17,7 +17,9 @@
     {prometheus, "4.8.1"},
     {elli, "3.3.0"},
     {hackney, "1.17.0"},
-    {websocket_client, "1.3.0"}
+    {websocket_client, "1.3.0"},
+    {grpcbox, {git, "https://github.com/novalabsxyz/grpcbox.git",
+               {branch, "master"}}}
 ]}.
 
 {plugins, [
