--- a/rebar.config
+++ b/rebar.config
@@ -8,11 +8,11 @@
     {clique, ".*", {git, "https://github.com/helium/clique.git", {branch, "develop"}}},
     {lager, "3.9.2"},
     {observer_cli, "1.6.0"},
-    {jsx, {git, "https://github.com/lthiery/jsx", {branch, "main"}}},
+    {jsx, "3.1.0"},
     {kvc, {git, "https://github.com/etrepum/kvc", {tag, "v1.7.0"}}},
     {blockchain, {git, "https://github.com/helium/blockchain-core.git", {branch, "master"}}},
     {erlang_lorawan, {git, "https://github.com/helium/erlang-lorawan.git", {branch, "master"}}},
-    {router_utils, {git, "https://github.com/helium/router-utils.git", {tag, "0.1.9"}}},
+    {router_utils, {git, "https://github.com/helium/router-utils.git", {tag, "0.1.11"}}},
     {iso8601, ".*", {git, "https://github.com/erlsci/iso8601.git", {tag, "1.3.1"}}},
     {xxhash, {git, "https://github.com/pierreis/erlang-xxhash", {branch, "master"}}},
     {prometheus, "4.8.1"},
