--- a/config/sys.config
+++ b/config/sys.config
@@ -53,6 +53,7 @@
                 grpc_opts => #{
                     service_protos => [router_pb, state_channel_pb],
                     services => #{
+                        'helium.router' => helium_pp_service,
                         'helium.state_channel' => blockchain_grpc_sc_server_handler
                     }
                 },
