--- a/rebar.config
+++ b/rebar.config
@@ -18,8 +18,8 @@
     {elli, "3.3.0"},
     {hackney, "1.17.0"},
     {websocket_client, "1.3.0"},
-    {grpcbox, {git, "https://github.com/novalabsxyz/grpcbox.git",
-               {branch, "master"}}}
+    {e2qc, {git, "https://github.com/helium/e2qc.git", {branch, "master"}}},
+    {grpcbox, {git, "https://github.com/novalabsxyz/grpcbox.git", {branch, "master"}}}
 ]}.
 
 {plugins, [
