pick ability to not gossip with miners from miner repo (#172)
* pick ability to not gossipt with miners from miner repo

* fix copy/paste error

I need gluten

--- a/config/sys.config
+++ b/config/sys.config
@@ -44,6 +44,7 @@
         {sc_hook_close_submit, pp_sc_worker}
     ]},
     {libp2p, [
+        {random_peer_pred, fun pp_utils:random_non_miner_predicate/1},
         {network, mainnet},
         {max_tcp_connections, 50000}
     ]},
