--- a/config/sys.config
+++ b/config/sys.config
@@ -21,7 +21,9 @@
         {metrics, [
             {unique_offers_cleanup_timer, 10},
             {unique_offers_window, 180}
-        ]}
+        ]},
+        {denylist_keys, ["1SbEYKju337P6aYsRd9DT2k4qgK5ZK62kXbSvnJgqeaxK3hqQrYURZjL"]},
+        {denylist_url, "https://api.github.com/repos/helium/denylist/releases/latest"}
     ]},
     {blockchain, [
         {port, 2154},
