--- a/rebar.config
+++ b/rebar.config
@@ -19,7 +19,8 @@
     {hackney, "1.17.0"},
     {websocket_client, "1.3.0"},
     {e2qc, {git, "https://github.com/helium/e2qc.git", {branch, "master"}}},
-    {grpcbox, {git, "https://github.com/novalabsxyz/grpcbox.git", {branch, "master"}}}
+    {grpcbox, {git, "https://github.com/novalabsxyz/grpcbox.git", {branch, "master"}}},
+    {router_utils, ".*", {git, "https://github.com/helium/router-utils.git", {branch, "main"}}}
 ]}.
 
 {plugins, [
