update helium_proto and add packet_router grpc server

--- a/config/test.config
+++ b/config/test.config
@@ -21,9 +21,10 @@
         {servers, [
             #{
                 grpc_opts => #{
-                    service_protos => [router_pb, state_channel_pb],
+                    service_protos => [router_pb, state_channel_pb, packet_router_pb],
                     services => #{
-                        'helium.state_channel' => blockchain_grpc_sc_server_handler
+                        'helium.state_channel' => blockchain_grpc_sc_server_handler,
+                        'helium.packet_router.packet' => helium_packet_service
                     }
                 },
                 transport_opts => #{ssl => false},
