--- a/rebar.config
+++ b/rebar.config
@@ -20,7 +20,8 @@
     {websocket_client, "1.3.0"},
     {e2qc, {git, "https://github.com/helium/e2qc.git", {branch, "master"}}},
     {grpcbox, {git, "https://github.com/novalabsxyz/grpcbox.git", {branch, "master"}}},
-    {router_utils, ".*", {git, "https://github.com/helium/router-utils.git", {branch, "main"}}}
+    {router_utils, ".*", {git, "https://github.com/helium/router-utils.git", {branch, "main"}}},
+    {helium_proto, {git, "https://github.com/helium/proto.git", {branch, "master"}}}
 ]}.
 
 {plugins, [
@@ -52,6 +53,8 @@
     validator_client_pb,
     router_pb,
     router_client_pb,
+    packet_router_pb,
+    packet_router_client_pb,
     state_channel_pb,
     state_channel_client_pb
 ]}.
