update workflow to use make
add grpc dep to makefile targets

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -68,7 +68,7 @@ jobs:
           mkdir _build
           tar -xvf build.tar.gz -C _build
       - name: xref
-        run: ./rebar3 xref
+        run: make xref
   eunit:
     needs: build
     runs-on: ubuntu-latest
@@ -89,7 +89,7 @@ jobs:
           mkdir _build
           tar -xvf build.tar.gz -C _build
       - name: eunit
-        run: ./rebar3 eunit -v
+        run: make eunit -v
   dialyzer:
     needs: build
     runs-on: ubuntu-latest
@@ -125,7 +125,7 @@ jobs:
           restore-keys: |
             plt-cache-
       - name: dialyzer
-        run: ./rebar3 dialyzer
+        run: make dialyzer
   ct:
     needs: build
     runs-on: ubuntu-latest
@@ -146,4 +146,4 @@ jobs:
           mkdir _build
           tar -xvf build.tar.gz -C _build
       - name: ct
-        run: CT_LAGER=DEBUG ./rebar3 ct
+        run: CT_LAGER=DEBUG make ct
