update to use same plugin version as grpc_gen

--- a/rebar.config
+++ b/rebar.config
@@ -26,7 +26,8 @@
 
 {plugins, [
     {grpcbox_plugin,
-        {git, "https://github.com/novalabsxyz/grpcbox_plugin.git", {branch, "master"}}},
+        {git, "https://github.com/novalabsxyz/grpcbox_plugin.git",
+            {branch, "andymck/ts-master/combined-opts-and-template-changes"}}},
     {rebar3_format, "0.8.2"},
     {erlfmt, "0.10.0"}
 ]}.
