add files to write to s3

--- a/.env-template
+++ b/.env-template
@@ -37,3 +37,7 @@ PP_NAT_INTERNAL_PORT=2154
 
 ## Http Roaming downlinking
 PP_HTTP_DOWNLINK_PORT=8081
+
+%% AWS S3 reporting
+PP_PACKET_REPORTER_AWS_BUCKET=test-bucket
+PP_PACKET_REPORTER_AWS_BUCKET_REGION=us-east-1
