--- a/config/sys.config
+++ b/config/sys.config
@@ -8,6 +8,11 @@
             {secret, <<>>},
             {auto_connect, false}
         ]},
+        {packet_reporter, #{
+            aws_bucket => <<"test-bucket">>,
+            report_interval => 300_000,
+            report_max_size => 50_000_000
+        }},
         {update_from_ws_config, false},
         {sc_open_dc_amount, 100},
         {sc_expiration_interval, 25},
@@ -45,6 +50,13 @@
         {gw_context_cache_max_size, 0},
         {sc_sup_type, server},
         {sc_hook_close_submit, pp_sc_worker}
+    ]},
+    {aws_credentials, [
+        {credential_providers, [aws_credentials_env, aws_credentials_ec2]},
+        %% comment out for ec2 usage
+        {aws_access_key_id, "testkey"},
+        {aws_secret_access_key, "testsecret"},
+        {aws_default_region, "us-west-2"}
     ]},
     {libp2p, [
         {random_peer_pred, fun pp_utils:random_non_miner_predicate/1},
