--- a/config/test.config
+++ b/config/test.config
@@ -6,6 +6,12 @@
             {port, 1700},
             {pull_data_timer, 2000}
         ]},
+        {packet_reporter, #{
+            aws_bucket => <<"test-bucket">>,
+            aws_bucket_region => <<"local">>,
+            report_interval => 300_000,
+            report_max_size => 50_000_000
+        }},
         {update_from_ws_config, true},
         {sc_open_dc_amount, 100},
         {sc_expiration_interval, 25},
@@ -15,6 +21,12 @@
     {blockchain, [
         {port, 2154},
         {sc_sup_type, server}
+    ]},
+    {aws_credentials, [
+        {credential_providers, [aws_credentials_env]},
+        {aws_access_key_id, "testkey"},
+        {aws_secret_access_key, "testsecret"},
+        {aws_default_region, "local"}
     ]},
     {grpcbox, [
         {client, #{channels => [{default_channel, [{http, "localhost", 8080, []}], #{}}]}},
