--- a/rebar.config
+++ b/rebar.config
@@ -18,6 +18,8 @@
     {elli, "3.3.0"},
     {hackney, "1.17.0"},
     {websocket_client, "1.3.0"},
+    {aws, {git, "https://github.com/aws-beam/aws-erlang.git", {tag, "0.7.1"}}},
+    {aws_credentials, {git, "https://github.com/aws-beam/aws_credentials.git", {tag, "0.1.9"}}},
     {e2qc, {git, "https://github.com/helium/e2qc.git", {branch, "master"}}},
     {grpcbox, {git, "https://github.com/novalabsxyz/grpcbox.git", {branch, "master"}}},
     {router_utils, ".*", {git, "https://github.com/helium/router-utils.git", {branch, "main"}}},
