add location worker

--- a/config/test.config
+++ b/config/test.config
@@ -29,7 +29,7 @@
         {aws_default_region, "local"}
     ]},
     {grpcbox, [
-        {client, #{channels => [{default_channel, [{http, "localhost", 8080, []}], #{}}]}},
+        {client, #{channels => [{ics_channel, [{http, "localhost", 8085, []}], #{}}]}},
         {servers, [
             #{
                 grpc_opts => #{
