setup regular ics config, and client channels for testing

--- a/config/test.config
+++ b/config/test.config
@@ -12,6 +12,11 @@
             report_interval => 300_000,
             report_max_size => 50_000_000
         }},
+        {ics, #{
+            transport => http,
+            host => "localhost",
+            port => 8085
+        }},
         {update_from_ws_config, true},
         {sc_open_dc_amount, 100},
         {sc_expiration_interval, 25},
@@ -29,7 +34,12 @@
         {aws_default_region, "local"}
     ]},
     {grpcbox, [
-        {client, #{channels => [{ics_channel, [{http, "localhost", 8085, []}], #{}}]}},
+        {client, #{
+            channels => [
+                {ics_channel, [{http, "localhost", 8085, []}], #{}},
+                {default_channel, [{http, "localhost", 8080, []}], #{}}
+            ]
+        }},
         {servers, [
             #{
                 grpc_opts => #{
