--- a/rebar.config
+++ b/rebar.config
@@ -59,7 +59,10 @@
     packet_router_pb,
     packet_router_client_pb,
     state_channel_pb,
-    state_channel_client_pb
+    state_channel_client_pb,
+    iot_config_client_pb,
+    iot_config_pb,
+    gateway_client_pb
 ]}.
 
 {profiles, [
