--- a/config/test.config
+++ b/config/test.config
@@ -63,6 +63,28 @@
                     max_frame_size => 16384,
                     max_header_list_size => unlimited
                 }
+            },
+            #{
+                grpc_opts => #{
+                    service_protos => [iot_config_pb],
+                    services => #{
+                        'helium.iot_config.gateway' => pp_test_ics_gateway_service
+                    }
+                },
+                transport_opts => #{ssl => false},
+                listen_opts => #{
+                    port => 8085,
+                    ip => {0, 0, 0, 0}
+                },
+                pool_opts => #{size => 2},
+                server_opts => #{
+                    header_table_size => 4096,
+                    enable_push => 1,
+                    max_concurrent_streams => unlimited,
+                    initial_window_size => 65535,
+                    max_frame_size => 16384,
+                    max_header_list_size => unlimited
+                }
             }
         ]}
     ]},
