Support new gateway field in packet_router_packet_down_v1_pb

--- a/rebar.config
+++ b/rebar.config
@@ -23,7 +23,8 @@
         {git, "https://github.com/novalabsxyz/chatterbox.git", {branch, "mj/upstream-changes"}}},
     {grpcbox, {git, "https://github.com/novalabsxyz/grpcbox.git", {branch, "master"}}},
     {router_utils, ".*", {git, "https://github.com/helium/router-utils.git", {branch, "main"}}},
-    {helium_proto, {git, "https://github.com/helium/proto.git", {branch, "master"}}}
+    {helium_proto,
+        {git, "https://github.com/helium/proto.git", {branch, "macpie/OneStreamToRuleThemAll"}}}
 ]}.
 
 {plugins, [
