--- a/config/test.config
+++ b/config/test.config
@@ -6,6 +6,12 @@
             {port, 1700},
             {pull_data_timer, 2000}
         ]},
+        {packet_reporter, #{
+            aws_bucket => <<"test-bucket">>,
+            aws_bucket_region => <<"local">>,
+            report_interval => 300_000,
+            report_max_size => 50_000_000
+        }},
         {update_from_ws_config, true},
         {sc_open_dc_amount, 100},
         {sc_expiration_interval, 25},
@@ -16,8 +22,19 @@
         {port, 2154},
         {sc_sup_type, server}
     ]},
+    {aws_credentials, [
+        {credential_providers, [aws_credentials_env]},
+        {aws_access_key_id, "testkey"},
+        {aws_secret_access_key, "testsecret"},
+        {aws_default_region, "local"}
+    ]},
     {grpcbox, [
-        {client, #{channels => [{default_channel, [{http, "localhost", 8080, []}], #{}}]}},
+        {client, #{
+            channels => [
+                {ics_channel, [{http, "localhost", 8085, []}], #{}},
+                {default_channel, [{http, "localhost", 8080, []}], #{}}
+            ]
+        }},
         {servers, [
             #{
                 grpc_opts => #{
@@ -30,6 +47,28 @@
                 transport_opts => #{ssl => false},
                 listen_opts => #{
                     port => 8080,
+                    ip => {0, 0, 0, 0}
+                },
+                pool_opts => #{size => 2},
+                server_opts => #{
+                    header_table_size => 4096,
+                    enable_push => 1,
+                    max_concurrent_streams => unlimited,
+                    initial_window_size => 65535,
+                    max_frame_size => 16384,
+                    max_header_list_size => unlimited
+                }
+            },
+            #{
+                grpc_opts => #{
+                    service_protos => [iot_config_pb],
+                    services => #{
+                        'helium.iot_config.gateway' => pp_test_ics_gateway_service
+                    }
+                },
+                transport_opts => #{ssl => false},
+                listen_opts => #{
+                    port => 8085,
                     ip => {0, 0, 0, 0}
                 },
                 pool_opts => #{size => 2},
