--- a/rebar.config
+++ b/rebar.config
@@ -22,7 +22,7 @@
     {aws_credentials, {git, "https://github.com/aws-beam/aws_credentials.git", {tag, "0.1.9"}}},
     {e2qc, {git, "https://github.com/helium/e2qc.git", {branch, "master"}}},
     {chatterbox,
-        {git, "https://github.com/novalabsxyz/chatterbox.git", {branch, "mj/upstream-changes"}}},
+        {git, "https://github.com/novalabsxyz/chatterbox.git", {branch, "adt/perf"}}},
     {grpcbox, {git, "https://github.com/novalabsxyz/grpcbox.git", {branch, "master"}}},
     {router_utils, ".*", {git, "https://github.com/helium/router-utils.git", {branch, "main"}}},
     {helium_proto, {git, "https://github.com/helium/proto.git", {branch, "master"}}}
