--- a/rebar.config
+++ b/rebar.config
@@ -21,9 +21,8 @@
     {aws, {git, "https://github.com/aws-beam/aws-erlang.git", {tag, "0.7.1"}}},
     {aws_credentials, {git, "https://github.com/aws-beam/aws_credentials.git", {tag, "0.1.9"}}},
     {e2qc, {git, "https://github.com/helium/e2qc.git", {branch, "master"}}},
-    {chatterbox,
-        {git, "https://github.com/novalabsxyz/chatterbox.git", {branch, "mj/upstream-changes"}}},
-    {grpcbox, {git, "https://github.com/novalabsxyz/grpcbox.git", {branch, "master"}}},
+    {grpcbox, {git, "https://github.com/novalabsxyz/grpcbox.git", {branch, "adt/immediate-sends"}}},
+    {chatterbox, {git, "https://github.com/novalabsxyz/chatterbox.git", {branch, "adt/perf"}}},
     {router_utils, ".*", {git, "https://github.com/helium/router-utils.git", {branch, "main"}}},
     {helium_proto, {git, "https://github.com/helium/proto.git", {branch, "master"}}}
 ]}.
